[package]
name = "mac_address"
version = "1.1.3"
authors = ["rep-nop <repnop@outlook.com>"]
edition = "2021"
description = "Cross-platform retrieval of a network interface MAC address."
repository = "https://github.com/rep-nop/mac_address"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mac", "address", "network", "interface"]

[dependencies]
serde = { version = "1.0.159", features = ["derive"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "freebsd", target_os = "openbsd", target_os = "android"))'.dependencies]
nix = "0.26"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_Foundation"] }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1.0"
